# social-gaming

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  test.sh
lib/: CMakeLists.txt
lib/Game/: Game.hpp  User.hpp
lib/game/: CMakeLists.txt
lib/game/include/: Config.hpp  Game.hpp  User.hpp
lib/game/src/: Config.cpp  Game.cpp  User.cpp
lib/manager/: CMakeLists.txt
lib/manager/include/: Element.hpp  GameManager.hpp  GeneralManager.hpp  Manager.hpp  Player.hpp  Rule.hpp  Setup.hpp  Spectator.hpp  User.hpp
lib/manager/src/: Element.cpp  GameManager.cpp  GeneralManager.cpp  Player.cpp  Rule.cpp  Setup.cpp  Spectator.cpp  User.cpp
lib/router/: CMakeLists.txt
lib/router/include/: Packet.hpp
lib/syntax/: CMakeLists.txt
lib/syntax/include/: SyntaxGenerator.hpp  SyntaxNode.hpp
lib/syntax/src/: SyntaxGenerator.cpp  SyntaxNode.cpp
lib/visitor/: CMakeLists.txt
lib/visitor/include/: Assigner.hpp  Data.hpp  Evaluator.hpp  Extender.hpp  JSONPrinter.hpp  Printer.hpp  Searcher.hpp  Sorter.hpp  TreeVisitor.hpp  Validator.hpp
lib/visitor/src/: Assigner.cpp  Evaluator.cpp  Extender.cpp  JSONPrinter.cpp  Printer.cpp  Searcher.cpp  Sorter.cpp  TreeVisitor.cpp  Validator.cpp
tests/: CMakeLists.txt
tests/deprecated/: RuleTests.cpp  SetupTests.cpp
tests/lib/: ElementTests.cpp  GameManagerTests.cpp  GeneralManagerTests.cpp  IOTests.cpp  RuleTests.cpp  SetupTests.cpp  UserTests.cpp  test_Element.cpp  test_GeneralManager.cpp  test_Rule.cpp
tests/tools/: ChatServerTests.cpp  DemoTests.cpp  test_chatserver.cpp
tools/: CMakeLists.txt  webchat.html
tools/client_flutter/: CMakeLists.txt
tools/server/: CMakeLists.txt  chatserver.cpp
tools/static/: webchat.html
tools/tree-sitter-demo/: CMakeLists.txt  demo.cpp  demo.h  rpsTest.txt
